# drs-xml-generator

./: .gitignore  README.md  drs_bookreviews.py  drs_conference.py  drsxml_book_reviews.ipynb  drsxml_conference.ipynb  pyproject.toml  requirements.txt  review_drs_backlog.ipynb  separate_conference.ipynb
__reference/: DRS_XML_Generaton_Single_proceeding_with_papers_5_3_0.ipynb  XML_Generator_SIG_5_3_0.ipynb
__semi-ref/: README.md  main.py
__semi-ref/book-reviews/: XML_Generator_Book_Reviews.ipynb
book-reviews/: xml_generator_book_reviews.py
drsxml/: config.py  core.py  loader.py
notebooks/: DRS_XML_Generator_Conference_proceeding_series_5_3_0.ipynb
