[project]
name = "drs-xml-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Lenny Martinez",email = "lennymartinezd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "lxml (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
